--- a/tests/data/barcode_demux/custom_barcodes/scoring_params.toml
+++ b/tests/data/barcode_demux/custom_barcodes/scoring_params.toml
@@ -1,6 +1,6 @@
 [scoring]
 
-max_barcode_score = 10
+max_barcode_cost = 10
 barcode_end_proximity = 75
 min_barcode_score_dist = 3
 min_separation_only_dist = 5
