--- a/.gitlab/sanitizers-ci.yml
+++ b/.gitlab/sanitizers-ci.yml
@@ -45,9 +45,9 @@ sanitize:linux:x86:focal:
     #   detect_leaks - LeakSanitizer errors out for some reason
     - export ASAN_OPTIONS=${ASAN_OPTIONS}:protect_shadow_gap=0:detect_leaks=0
 
-sanitize:linux:arm64:bionic:
+sanitize:linux:arm64:focal:
   extends:
-    - build:linux:arm64:bionic
+    - build:linux:arm64:focal
     - .sanitizer_common_linux
   retry:
     max: 1
