[DOR-520] Update submodules as part of the checkout
This avoids having to do it as part of the build.

--- a/.gitlab/build-ont_core.yml
+++ b/.gitlab/build-ont_core.yml
@@ -9,6 +9,7 @@
     -   time git submodule update --init --recursive
     -   pushd dorado
     -     time git checkout ${CI_COMMIT_SHA}
+    -     time git submodule update --init --recursive
     -   popd
     - popd
     # Do the build
