--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -286,7 +286,7 @@ build:linux:arm64:bionic:unittests:
     - build:linux:arm64:bionic
 
 build:linux:arm64:focal:
-  image: nvcr.io/nvidia/l4t-pytorch:r35.1.0-pth1.13-py3
+  image: ${DORADO_DOCKER_ROOT}/dorado-l4t-pytorch-r35.1.0-pth1.13-py3:1.0
   variables:
     BUILD_OPTIONS: "-DONT_MM2_EXE=ON"
   extends:
@@ -429,7 +429,7 @@ build_archive:linux:arm64:bionic:
     - .on_nightly_or_manual
 
 build_archive:linux:arm64:focal:
-  image: nvcr.io/nvidia/l4t-pytorch:r35.1.0-pth1.13-py3
+  image: ${DORADO_DOCKER_ROOT}/dorado-l4t-pytorch-r35.1.0-pth1.13-py3:1.0
   extends:
     - .linux_dependencies
     - .linux_arm64_runner
@@ -546,7 +546,7 @@ test:linux:arm64:bionic:
     - build:linux:arm64:bionic
 
 test:linux:arm64:focal:
-  image: nvcr.io/nvidia/l4t-pytorch:r35.1.0-pth1.13-py3
+  image: ${DORADO_DOCKER_ROOT}/dorado-l4t-pytorch-r35.1.0-pth1.13-py3:1.0
   extends:
     - .linux_dependencies
     - .linux_orin_runner
@@ -615,7 +615,7 @@ test_archive:linux:arm64:18.04:
     - build_archive:linux:arm64:bionic
 
 test_archive:linux:arm64:20.04:
-  image: nvcr.io/nvidia/l4t-pytorch:r35.1.0-pth1.13-py3
+  image: ${DORADO_DOCKER_ROOT}/dorado-l4t-pytorch-r35.1.0-pth1.13-py3:1.0
   extends:
     - .linux_dependencies
     - .linux_orin_runner
