Partial scaffolding for dorado correct
1. Added random sequence reader from fastq
2. Added node to run ava alignment and fetch overlaps + cigars
3. Added cli for `dorado correct`

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -177,6 +177,8 @@ add_library(dorado_lib
     dorado/read_pipeline/DefaultClientInfo.h
     dorado/read_pipeline/DuplexReadTaggingNode.cpp
     dorado/read_pipeline/DuplexReadTaggingNode.h
+    dorado/read_pipeline/ErrorCorrectionMapperNode.cpp
+    dorado/read_pipeline/ErrorCorrectionMapperNode.h
     dorado/read_pipeline/FakeDataLoader.cpp
     dorado/read_pipeline/FakeDataLoader.h
     dorado/read_pipeline/HtsReader.cpp
@@ -256,6 +258,8 @@ add_library(dorado_lib
     dorado/poly_tail/rna_poly_tail_calculator.h
     dorado/summary/summary.cpp
     dorado/summary/summary.h
+    dorado/hts_io/FastxRandomReader.cpp
+    dorado/hts_io/FastxRandomReader.h
 )
 
 enable_warnings_as_errors(dorado_lib)
@@ -336,6 +340,7 @@ if(NOT DORADO_DISABLE_DORADO)
         dorado/cli/benchmark.cpp
         dorado/cli/download.cpp
         dorado/cli/summary.cpp
+        dorado/cli/correct.cpp
         dorado/cli/cli.h
         dorado/cli/cli_utils.h
     )
