Add correction node
which is responsible for
1. extracting windows from alignments
2. extracting features for each window

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -179,6 +179,8 @@ add_library(dorado_lib
     dorado/read_pipeline/DuplexReadTaggingNode.h
     dorado/read_pipeline/ErrorCorrectionMapperNode.cpp
     dorado/read_pipeline/ErrorCorrectionMapperNode.h
+    dorado/read_pipeline/CorrectionNode.cpp
+    dorado/read_pipeline/CorrectionNode.h
     dorado/read_pipeline/FakeDataLoader.cpp
     dorado/read_pipeline/FakeDataLoader.h
     dorado/read_pipeline/HtsReader.cpp
