--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -251,6 +251,21 @@ build:linux:x86:focal:clang_tidy:
     - *set_parallel_jobs
     - ./.gitlab/run_clang_tidy.sh -j ${PARALLEL_JOBS}
 
+build:linux:x86:focal:valgrind:
+  stage: build
+  image: ${DORADO_DOCKER_ROOT}/dorado-deps-20.04-cuda-${CUDA}.0:1.1
+  variables:
+    # valgrind can't cope with huge executables, so we have to go dynamic.
+    BUILD_OPTIONS: "-D TRY_USING_STATIC_TORCH_LIB=NO"
+  extends:
+    - .linux_runner
+  script:
+    - apt update && apt install -y valgrind
+    - !reference [.run_dorado_cmake_build]
+    # Run the ordinary tests directly under valgrind.
+    # We don't use `ctest -VV -E smoke -T memcheck` since that requires additional setup.
+    - valgrind --error-exitcode=1 -- ./${BUILD_DIR}/tests/dorado_tests
+
 # We have to split the tegra builds into separate build+test jobs since we can't
 # test on the machines we build on.
 build:linux:arm64:bionic:
