Allow dependent targets to be built in parallel when using Makefiles
Linking can take a while in CI and we spend a lot of time waiting for
dependencies to link before starting to build the next library.
Since most of our targets have no side effects we can enable this flag
and cmake will realise that there's no side effects and build those
that it can in parallel.

This saves ~20% total time on a Linux build (7m41s -> 6m15s).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,9 @@ endif()
 #  eventually set elsewhere
 set(BUILD_SHARED_LIBS OFF)
 
+# Allow targets with no side effects to be built in parallel when using Makefiles.
+set(CMAKE_OPTIMIZE_DEPENDENCIES ON)
+
 get_cmake_property(MULTI_CONFIG GENERATOR_IS_MULTI_CONFIG)
 if (NOT MULTI_CONFIG)
   if (NOT EXISTS ${CMAKE_BINARY_DIR}/CMakeCache.txt AND NOT CMAKE_BUILD_TYPE)
