Don't enable ccache for sanitizer builds
From testing, a bad ccache can be up to 2x slower than using a PCH vs a
good cache which can reduce it 5x. We don't seem to be getting anywhere
near that improvement in CI, so disable it. This may help the other
builds too since it's a per-runner cache and hence shared between all
jobs on a runner.

--- a/.gitlab/sanitizers-ci.yml
+++ b/.gitlab/sanitizers-ci.yml
@@ -10,6 +10,9 @@
   before_script:
     # Add the sanitizer flag to the build
     - export BUILD_OPTIONS="${BUILD_OPTIONS} -D ECM_ENABLE_SANITIZERS='${SANITIZER}'"
+    # Disable ccache since it's not likely to find a match and it slows down the ordinary
+    # builds if we do polute the cache.
+    - export BUILD_OPTIONS="${BUILD_OPTIONS} -D DORADO_DISABLE_CCACHE=ON"
     # Setup additional runtime options
     - export ASAN_OPTIONS=detect_stack_use_after_return=1:check_initialization_order=1
     - export UBSAN_OPTIONS=print_stacktrace=1:halt_on_error=1:suppressions=${PWD}/.gitlab/ubsan.supp
