Fix jobs that build Koi from source

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,11 @@ endif()
 set(BUILD_SHARED_LIBS OFF)
 
 # Allow targets with no side effects to be built in parallel when using Makefiles.
-set(CMAKE_OPTIMIZE_DEPENDENCIES ON)
+# Koi uses OBJECT targets which are (currently) incompatible with this.
+# See https://gitlab.kitware.com/cmake/cmake/-/issues/24058.
+if (NOT BUILD_KOI_FROM_SOURCE)
+    set(CMAKE_OPTIMIZE_DEPENDENCIES ON)
+endif()
 
 get_cmake_property(MULTI_CONFIG GENERATOR_IS_MULTI_CONFIG)
 if (NOT MULTI_CONFIG)
