Refactoring. Moved ArgParse helper methods from cli/cli_utils.h to utils/arg_parse_ext.h

--- a/dorado/utils/CMakeLists.txt
+++ b/dorado/utils/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(dorado_utils
     alignment_utils.cpp
     alignment_utils.h
+    arg_parse_ext.h
     AsyncQueue.h
     bam_utils.cpp
     bam_utils.h
