--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -148,7 +148,8 @@ add_library(dorado_lib
     dorado/alignment/BedFile.h
     dorado/alignment/IndexFileAccess.cpp
     dorado/alignment/IndexFileAccess.h
-    dorado/alignment/minimap2_arg_parsing.h
+    dorado/alignment/minimap2_args.cpp
+    dorado/alignment/minimap2_args.h
     dorado/alignment/Minimap2Aligner.cpp
     dorado/alignment/Minimap2Aligner.h
     dorado/alignment/Minimap2Index.cpp
