DOR-611 Model config can set basecaller parameter defaults

--- a/dorado/basecall/CMakeLists.txt
+++ b/dorado/basecall/CMakeLists.txt
@@ -1,4 +1,6 @@
 add_library(dorado_basecall STATIC
+    BasecallerParams.cpp
+    BasecallerParams.h
     crf_utils.cpp
     crf_utils.h
     CRFModelConfig.cpp
