--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -150,11 +150,13 @@ add_library(dorado_lib
     dorado/alignment/IndexFileAccess.h
     dorado/alignment/minimap2_args.cpp
     dorado/alignment/minimap2_args.h
+    dorado/alignment/minimap2_wrappers.h
     dorado/alignment/Minimap2Aligner.cpp
     dorado/alignment/Minimap2Aligner.h
     dorado/alignment/Minimap2Index.cpp
     dorado/alignment/Minimap2Index.h
     dorado/alignment/Minimap2IndexSupportTypes.h
+    dorado/alignment/Minimap2Options.cpp
     dorado/alignment/Minimap2Options.h
     dorado/api/caller_creation.cpp
     dorado/api/caller_creation.h
