[INSTX-5234] Bring sam line parsing from ont_core into dorado

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -146,6 +146,8 @@ add_library(dorado_lib
     dorado/alignment/Minimap2Index.h
     dorado/alignment/Minimap2IndexSupportTypes.h
     dorado/alignment/Minimap2Options.h
+    dorado/alignment/sam_utils.cpp
+    dorado/alignment/sam_utils.h
     dorado/api/caller_creation.cpp
     dorado/api/caller_creation.h
     dorado/api/runner_creation.cpp
