--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -393,7 +393,7 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
     set(VERSIONED_CUDA_LIBS
         libcublas*.so.*
         libcudart*.so.*
-        libnvrtc*.so.*
+        libnvrtc*.so*
         libnvToolsExt*.so.*
     )
 
@@ -428,7 +428,7 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
             endforeach()
         else()
             # bundle the libraries from the cuda toolkit
-            file(GLOB NATIVE_CUDA_LIBS "${CUDAToolkit_ROOT}/targets/${CMAKE_SYSTEM_PROCESSOR}-linux/lib/${LIB}")
+            file(GLOB NATIVE_CUDA_LIBS "${CUDAToolkit_TARGET_DIR}/targets/${CMAKE_SYSTEM_PROCESSOR}-linux/lib/${LIB}")
             install(FILES ${NATIVE_CUDA_LIBS} DESTINATION lib COMPONENT redist_libs)
         endif()
     endforeach()
