--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -217,6 +217,15 @@ build:linux:x86:focal:
     - .linux_runner
     - .build_and_test_dorado
 
+build:linux:x86:jammy:
+  image: ${DORADO_DOCKER_ROOT}/dorado-deps-22.04-cuda-${CUDA}.0:1.1
+  variables:
+    BUILD_OPTIONS: "-DBUILD_KOI_FROM_SOURCE=ON -DGITLAB_CI_TOKEN=${CI_JOB_TOKEN} -DONT_MM2_EXE=ON"
+  extends:
+    - .linux_dependencies
+    - .linux_runner
+    - .build_and_test_dorado
+
 build:linux:x86:focal:debug:
   variables:
     BUILD_TYPE: "Debug"
