Added output-dir command line arg to duplex subcommand. Refactored parsing output file command line args

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -357,6 +357,8 @@ if(NOT DORADO_DISABLE_DORADO)
     add_executable(dorado
         dorado/main.cpp
         dorado/cli/aligner.cpp
+        dorado/cli/basecall_output_args.cpp
+        dorado/cli/basecall_output_args.h
         dorado/cli/demux.cpp
         dorado/cli/duplex.cpp
         dorado/cli/trim.cpp
