Added supprt for thread naming of pipeline worker threads

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -239,6 +239,8 @@ add_library(dorado_lib
     dorado/read_pipeline/StereoDuplexEncoderNode.h
     dorado/read_pipeline/SubreadTaggerNode.cpp
     dorado/read_pipeline/SubreadTaggerNode.h
+    dorado/read_pipeline/application_context.cpp
+    dorado/read_pipeline/application_context.h    
     dorado/read_pipeline/messages.cpp
     dorado/read_pipeline/messages.h
     dorado/read_pipeline/flush_options.h
@@ -250,6 +252,7 @@ add_library(dorado_lib
     dorado/read_pipeline/stereo_features.h
     dorado/read_pipeline/stitch.cpp
     dorado/read_pipeline/stitch.h
+    dorado/read_pipeline/thread_naming.h    
     dorado/splitter/DuplexReadSplitter.cpp
     dorado/splitter/DuplexReadSplitter.h
     dorado/splitter/RNAReadSplitter.cpp
